# live-translation-ai

./: .gitignore  .jscpd.json  .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
docs/: PRD_MVP.md
examples/: basic_usage.py  english_to_hindi_translation.py  sample_english_text.txt  test_commands_en_to_hi.sh  voice_cloning_demo.py  voice_cloning_demo.sh
scripts/: check-duplicates.sh  check-inline-imports.py
src/live_translation/: __init__.py
src/live_translation/api/: __init__.py  cli.py
src/live_translation/audio/: __init__.py  capture.py  processor.py  whisper_utils.py
src/live_translation/core/: __init__.py  config.py  exceptions.py  models.py  structured_logging.py
src/live_translation/translation/: __init__.py  engine.py  text_translator.py  whisper_adapter.py  whisper_document_loader.py  whisper_engine.py  whisper_streaming.py  whisper_transcriber.py
src/live_translation/utils/: device.py  language_detector.py  language_mapper.py  logger.py
src/live_translation/voice_cloning/: __init__.py  engine.py  models.py  pipeline.py  xtts_cloner.py
tests/: conftest.py
tests/integration/: test_translation_workflow.py  test_voice_cloning_integration.py  test_voice_cloning_real.py
tests/unit/: test_en_to_hi_translation.py  test_models.py  test_translation_engine.py  test_voice_cloning.py
