[project]
name = "live-translation-ai"
version = "0.1.0"
description = "A locally-run, privacy-first live translation tool with real-time capabilities"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.11.9,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "openai-whisper>=20231117",
    "click>=8.2.1,<9.0.0",
    "rich>=14.1.0,<15.0.0",
    "structlog>=25.4.0,<26.0.0",
    "sounddevice>=0.5.2,<1.0.0",
    "numpy>=1.24.0,<2.0.0",
    "langdetect>=1.0.9,<2.0.0",
    "torch>=2.0.0",
    "triton>=2.3.1; sys_platform == 'linux'",
    "transformers>=4.56.1",
    "sentencepiece>=0.2.1",
]

[project.scripts]
translate = "live_translation.api.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "hypothesis>=6.92.0,<7.0.0",
    "ruff>=0.1.8,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "black>=23.12.0,<25.0.0",
    "pre-commit>=3.6.0,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/live_translation"]
